# bar-minimal-tools

./: .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GOVERNANCE.md  ROADMAP.md  SECURITY_DECISIONS.md  STYLEGUIDE.md
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  config.rs  folders.rs  headset.rs  media.rs  mod.rs  monitor.rs  notes.rs  popup.rs  startup.rs  system.rs  weather.rs  windows.rs
src-tauri/src/services/: appbar.rs  audio.rs  cpu.rs  gpu.rs  headset.rs  lhm_manager.rs  lhm_temperature.rs  media.rs  mod.rs  network.rs  pdh.rs  ram.rs  storage.rs  weather.rs  windows.rs  windows_thermal.rs  wmi_service.rs
src/components/: AnimatedWidgetSlot.tsx  SettingsModal.tsx  Taskbar.tsx  icons.tsx
src/components/popup/: AudioPopup.tsx  CalendarPopup.tsx  CpuPopup.tsx  DevColorPopup.tsx  FoldersPopup.tsx  GpuPopup.tsx  HeadsetPopup.tsx  MediaPopup.tsx  NetworkPopup.tsx  NotesPopup.tsx  PowerPopup.tsx  RamPopup.tsx  SettingsPopup.tsx  StoragePopup.tsx  TaskSwitcherPopup.tsx
src/components/popup/notes/: NotesEditMode.tsx  NotesListView.tsx  NotesPreview.tsx  NotesViewMode.tsx  index.ts  notesHelpers.tsx  useNotes.ts
src/components/popup/settings/: AppearanceTab.tsx  ShortcutsTab.tsx  SystemTab.tsx  WidgetsTab.tsx  index.ts
src/components/shared/: SettingsShared.tsx
src/components/widgets/: AudioWidget.tsx  ClockWidget.tsx  CpuWidget.tsx  GpuWidget.tsx  HeadsetWidget.tsx  HeadsetWidgetParts.tsx  MediaWidget.tsx  NetworkWidget.tsx  NotesWidget.tsx  RamWidget.tsx  StorageWidget.tsx  TaskSwitcherWidget.tsx  WeatherWidget.tsx  headsetHelpers.tsx  useHeadset.ts
src/config/: defaultConfig.ts
src/styles/: base.css  tokens.css
src/styles/components/: taskbar.css  widget-base.css
src/test/: setup.ts
src/types/: index.ts
src/utils/: popupPosition.ts  usePopupExit.ts  widgets.test.ts  widgets.ts
